apps/dashboard/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: lazy-typing
  labels:
    app.kubernetes.io/name: dashboard
spec:
  selector:
    app.kubernetes.io/name: dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
